atualizado og:image com a minha foto de perfil

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       content="Portfólio do Desenvolvedor Web Profissional DEV ANDRÉ LUIS"
     />
     <meta property="og:title" content="DEV WEB André Luis" />
+    <meta property="og:image" content="https://github.com/DevAndreLuis/perfil.git">
+
 
     <title>Document</title>
   </head>
