alterado o link com a imagem corrigida e convertida para jpg no projeto

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       content="Portfólio do Desenvolvedor Web Profissional DEV ANDRÉ LUIS"
     />
     <meta property="og:title" content="DEV WEB André Luis" />
-    <meta property="og:image" content="https://github.com/DevAndreLuis/perfil.git">
-
+    <meta
+      property="og:image"
+      content="https://github.com/DevAndreLuis/perfil/blob/main/images/desenvolvedor%20web%20dev%20andr%C3%A9%20luis%20front%20end%20linkedin%20github2.jpg?raw=true"
+    />
 
     <title>Document</title>
   </head>
