Andamento do site parte 2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta name="author" content="Dev André Luis" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--GOOGLE FONT POPPINS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!--GOOGLE FONT POPPINS-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
@@ -19,12 +27,60 @@
       content="Portfólio do Desenvolvedor Web Profissional DEV ANDRÉ LUIS"
     />
     <meta property="og:title" content="DEV WEB André Luis" />
-    <meta
-      property="og:image"
-      content="https://github.com/DevAndreLuis/perfil/blob/main/images/desenvolvedor%20web%20dev%20andr%C3%A9%20luis%20front%20end%20linkedin%20github2.jpg?raw=true"
-    />
 
-    <title>Document</title>
+    <title>Dev André Luis</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="interface">
+        <div class="rotate"></div>
+        <!--LOGO-->
+        <div class="logo">
+          <a href="#"
+            ><img
+              src="./assets/images/logo_andre_dev.jpg"
+              alt="Logo Dev André Luis Desenvolvedor web"
+          /></a>
+        </div>
+        <!--LOGO-->
+
+        <!--Menu Desktop-->
+        <nav class="menu-desktop">
+          <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+          </ul>
+        </nav>
+        <!--Menu Desktop-->
+
+        <!--Botão de contato-->
+        <div class="btn-contato">
+          <a href="#"><button>Contato</button></a>
+        </div>
+        <!--Botão de contato-->
+      </div>
+    </header>
+    <!--interface-->
+    <main>
+      <section class="topo-do-site">
+        <div class="interface">
+          <div class="flex">
+            <div class="txt-topo-site">
+              <h1 style="color: white;">DESENVOLVEDOR WEB "DEV ANDRÉ LUIS"</h1>
+              <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus minus suscipit voluptatum aut non, voluptates et adipisci numquam ad libero. Maiores, labore? Cupiditate, placeat adipisci non temporibus pariatur magnam cum.</p>
+              <div class="btn-contato">
+                <a href=""><button>Entre em contato</button></a>
+              </div>
+            </div>
+            <div class="img-topo-site">
+              <img src="./assets/images/perfil_Dev_andreMendes.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
